tests/ui/empty/empty-macro-use.stderr
error: cannot find macro `macro_two` in this scope
  --> $DIR/empty-macro-use.rs:7:5
   |
LL |     macro_two!();
   |     ^^^^^^^^^
   |
   = help: consider importing this macro:
           use two_macros::macro_two;
   |
LL + use two_macros::macro_two;
   |

error: aborting due to previous error

